<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textPuntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/puntuacion_obtenida"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btCompartir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/bt_compartir" />

    <Button
        android:id="@+id/btVolverMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btCompartir"
        android:layout_alignRight="@+id/btCompartir"
        android:layout_below="@+id/btCompartir"
        android:layout_marginTop="18dp"
        android:text="@string/bt_volver_menu" />

</RelativeLayout>